--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-helmet": "^6.1.0",
+    "react-router-dom": "^7.8.2",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
